# onchain-escrow

./: .gitignore  Anchor.toml  DEPLOYMENT_SUMMARY.md  DEPLOY_NEW_PROGRAM.md  FIX_PROGRAM_ID_MISMATCH.sh  NEW_PROGRAM_SETUP_COMPLETE.md  PROGRAM_ID_MISMATCH_FIX.md  README.md  RUN_IN_WSL.sh  UPGRADE_EXISTING_PROGRAM.sh  WSL_DEPLOYMENT_FIX.md  airdrop.sh  architecture.md  build_and_test.sh  codecs-core.tgz  codecs-numbers.tgz  codecs-strings.tgz  coding_convention.md  delay.tgz  deploy.sh  errors.tgz  fix-wsl-deployment.sh  fix_and_rebuild.sh  fix_program_id.sh  force_rebuild_and_upgrade.sh  generate-and-update.js  generate-new-keypair.js  get-program-id.js  options.tgz  package.json  rebuild_and_upgrade_no_deal_id.sh  request-airdrop.js  request-airdrop.ps1  run_test.sh  show_output.txt  sync-keypair-from-windows.sh  t ✅ Program ID updated to 7PNrJ5oy88u2o4DtvoRhAbnAmqZtWKvqRoURZNbmaJZi -ForegroundColor Green  test_and_deploy.sh  verify-program-id.ps1  verify_upgrade.sh
docs/: dependencies.md
programs/onchain_escrow/: Cargo.toml  check_output.txt
programs/onchain_escrow/src/: errors.rs  events.rs  fund.rs  initiate.rs  initiate_handler.rs  lib.rs  lib.rs.bak  open_dispute.rs  refund.rs  release.rs  resolve_handler.rs  state.rs  tests_unit.rs  utils.rs
programs/onchain_escrow/src/instructions/: fund.rs  initiate.rs  open_dispute.rs  refund.rs  release.rs  resolve.rs  submit_evidence.rs
programs/onchain_escrow/src/state/: enums.rs  escrow_state.rs  price_snapshot.rs
tests/: README-mock.md  arbiter_keypair.ts  escrow_flow.ts  escrow_flow_backup.ts  mock_arbiter.ts
(+24 files in other folders)
