[package]
name = "onchain_escrow"
version = "0.1.0"
edition = "2021"

[lib]
name = "onchain_escrow"
crate-type = ["cdylib", "lib"]

[features]
default = []
no-entrypoint = []
cpi = []
custom-heap = []
custom-panic = []
anchor-debug = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"




